Beaker Changelog
================

1.3 (**tip**)
* Added cache.region decorator to the CacheManager object.
* Added cache regions. Can be provided in a configuration INI type, or
  by adding in a cache_regions arg to the CacheManager.
* Fix bug with timeout not being saved properly.
* Fix bug with cookie-only sessions sending cookies for new sessions even
  if they weren't supposed to be saved.
* Fix bug that caused a non-auto accessed session to not record the time it
  was previously accessed resulting in session timeouts.
* Add function to parse configuration dicts as appropriate for use with the
  CacheManager.
* The "expiretime" is no longer passed to the memcached backend - since
  if memcached makes the expired item unavailable at the same time the
  container expires it, then all actors must block until the new value
  is available (i.e. breaks the anti-dogpile logic).


1.2.3 (3/2/2009)
* Fix accessed increment to take place *after* the accessed time is checked
  to see if it has expired. Fixes #580.
* data_dir/lock_dir parameters are optional to most backends; if not
  present, mutex-based locking will be used for creation functions
* Adjustments to Container to better account for backends which
  don't provide read/write locks, such as memcached.  As a result,
  the plain "memory" cache no longer requires read/write mutexing.

1.2.2 (2/14/2009)
* Fix delete bug reported by andres with session not being deleted.

1.2.1 (2/09/2009)
* Fix memcached behavior as memcached returns None on nonexistent key
  fetch which broke invalid session checking.

1.2 (1/22/2009)
* Updated session to only save to the storage *once* no under any/all
  conditions rather than every time save() is called.
* Added session.revert() function that reverts the session to the state at
  the beginning of the request.
* Updated session to store entire session data in a single namespace key,
  this lets memcached work properly, and makes for more efficient use of the