@@ -2,6 +2,7 @@ Beaker Changelog
 ================
 
 1.3 (**tip**)
+* Fixed bug with invalidate and locks, fixes #594.
 * Added cache.region decorator to the CacheManager object.
 * Added cache regions. Can be provided in a configuration INI type, or
   by adding in a cache_regions arg to the CacheManager.
